Fixes a bug where DatePicker would only open on focus every other time. Also cleans up calendar for high contrast.

--- a/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
+++ b/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
@@ -12,9 +12,6 @@ $Calendar-dayPicker-margin: 10px;
   * {
     @include focus-border($color: $ms-color-neutralSecondary);
 
-    @include high-contrast {
-       @include focus-border(0, WindowText, 2px, false);
-    }
   }
 }
 
@@ -132,9 +129,6 @@ $Calendar-dayPicker-margin: 10px;
   * {
     @include focus-border(-2px, $color: $ms-color-neutralSecondary);
 
-    @include high-contrast {
-       @include focus-border(-2px, WindowText, 2px, false);
-    }
   }
 }
 
